# gridflow

./: .coverage  .gitignore  GridFlowGUI.spec  GridFlowGUI_Setup.iss  LICENSE.txt  MANIFEST.in  Procfile.txt  README.md  gridflow-cli.spec  gridflow.spec  gridflow_entry.py  hook-pyproj-prefix.py  junk2.py  pyproject.toml  requirements.txt  run_gui.py  setup.py
.github/workflows/: build.yml  test.yml
gridflow/: __init__.py  __main__.py  catalog_generator.py  clip_netcdf.py  cmip5_downloader.py  cmip6_downloader.py  commands.py  crop_netcdf.py  database_generator.py  downloader.py  logging_utils.py  prism_downloader.py  pyproject.toml
gui/: __init__.py  main.py
gui/vocab/: cmip5_ensemble.json  cmip5_experiment.json  cmip5_institute.json  cmip5_model.json  cmip5_time_frequency.json  cmip5_variable.json  cmip6_activity_id.json  cmip6_experiment_id.json  cmip6_grid_label.json  cmip6_institution_id.json  cmip6_member_id.json  cmip6_resolution.json  cmip6_source_id.json  cmip6_source_type.json  cmip6_table_id.json  cmip6_time_frequency.json  cmip6_variable_id.json  cmip6_variant_label.json
iowa_border/: iowa_border.shp.xml
tests/: test_clip_netcdf.py  test_cmip6_downloader.py  test_crop_netcdf.py  test_database_generator.py  test_download_prism.py  test_downloader.py  test_main.py
