[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridflow"
version = "1.0"
description = "A library to download, crop, clip, generate databases, and run batch processes for CMIP5, CMIP6, and PRISM climate data with deduplication and error handling"
readme = "README.md"
authors = [{name = "Bhuwan Shah", email = "bshah@iastate.edu"}]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "netCDF4>=1.6.0",
    "numpy>=1.21.0",
    "geopandas>=0.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shahbhuwan/GridFlow"
Repository = "https://github.com/shahbhuwan/GridFlow"

[project.scripts]
gridflow = "gridflow.__main__:main"
gridflow-download = "gridflow.downloader.cmip6_downloader:run_download"
gridflow-download-cmip5 = "gridflow.downloader.cmip5_downloader:run_download"
gridflow-download-prism = "gridflow.downloader.prism_downloader:download_prism"
gridflow-crop = "gridflow.crop_netcdf:main"
gridflow-clip = "gridflow.clip_netcdf:main"
gridflow-db = "gridflow.database_generator:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
