[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridflow"
version = "1.0"
description = "A library and GUI to download, crop, clip, and catalog CMIP5, CMIP6, and PRISM climate data concurrently"
readme = "README.md"
authors = [{name = "Bhuwan Shah", email = "bshah@iastate.edu"}]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0,<3.0",
    "netCDF4>=1.6.0,<2.0",
    "numpy>=1.21.0,<2.0",
    "geopandas>=0.10.0,<1.0",
    "PyQt5>=5.15.9,<6.0",
    "python-dateutil>=2.8.0,<3.0",
    "shapely>=1.7.1,<2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shahbhuwan/GridFlow"
Repository = "https://github.com/shahbhuwan/GridFlow"

[project.scripts]
gridflow = "gridflow.__main__:main"
gridflow-gui = "gui.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]